manifests/sample-nodejs.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sample-nodejs
      name: sample-nodejs
    name: sample-nodejs
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sample-nodejs
      name: sample-nodejs
    name: sample-nodejs
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: sample-nodejs:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/konosuke115/sample-nodejs
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: nodejs:10
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: B-rMKA27QvkdBV7NaNA7
      type: GitHub
    - generic:
        secret: gvDOaKClPVQWleYSeqXM
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sample-nodejs
      name: sample-nodejs
    name: sample-nodejs
  spec:
    replicas: 1
    selector:
      app: sample-nodejs
      deploymentconfig: sample-nodejs
      name: sample-nodejs
    strategy:
      resources: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
          sidecar.istio.io/inject: 'true'
        creationTimestamp: null
        labels:
          app: sample-nodejs
          deploymentconfig: sample-nodejs
          name: sample-nodejs
      spec:
        containers:
        - image: sample-nodejs:latest
          name: sample-nodejs
          ports:
          - containerPort: 3000
            protocol: TCP
          resources: {}
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - sample-nodejs
        from:
          kind: ImageStreamTag
          name: sample-nodejs:latest
      type: ImageChange
  status:
    availableReplicas: 0
    latestVersion: 0
    observedGeneration: 0
    replicas: 0
    unavailableReplicas: 0
    updatedReplicas: 0
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: sample-nodejs
      name: sample-nodejs
    name: sample-nodejs
  spec:
    ports:
    - name: 8080-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: sample-nodejs
      deploymentconfig: sample-nodejs
      name: sample-nodejs
  status:
    loadBalancer: {}
kind: List
metadata: {}
