manifests/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-nodejs
spec:
  gateways:
    - sample-nodejs-gateway
  hosts:
    - '*'
  http:
    - match:
      - uri:
        exact: /fruits
      route:
        - destination:
            host: sample-nodejs
            port:
              number: 80
