manifests/sample-nodejs-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sample-nodejs-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-nodejs
spec:
  gateways:
    - sample-nodejs-gateway
  hosts:
    - '*'
  http:
    - match:
      - uri:
        exact: /sample-nodejs
      route:
        - destination:
            host: sample-nodejs
            port:
              number: 3000
