manifests/sample-nodejs-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: sample-nodejs
spec:
  host: sample-nodejs.apps.example.com
  #path:
  to:
   kind: Service
   name: sample-nodejs
